Make sure the settings pane is visible above all site content

--- a/chrome/injected/browserAction.css
+++ b/chrome/injected/browserAction.css
@@ -10,6 +10,7 @@
   font-size: 16px;
   line-height: 1.2;
   display: none;
+  z-index: 3000;
 }
 
 .citizen-ex__pane h1 {
